# pr-dependency

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build.yaml
app/: __init__.py
app/routes/: handlers.py  webhook.py
app/services/: config.py
tests/services/: test_config.py
