[tool.poetry]
name = "pr-dependency"
version = "0.1.0"
description = "A GitHub App to provide commit-status whichs depend on pr."
authors = ["moreal <dev.moreal@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
flask = "1.1.2"
PyGithub = "1.53"

[tool.poetry.dev-dependencies]
pre-commit = "2.7.1"
mypy = "0.782"
black = "20.8b1"
pytest = "6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
